# sgx-interface-side-channel

./: .gitignore  CMakeLists.txt  Execution Time.eps  Output Size.eps  README.md  crawl_topsite.py  data_formalization.py  find_variant_length_pointers.sh
LLVMPass/: CMakeLists.txt  README.md
LLVMPass/Branch/: BranchElimination.cpp  BranchElimination_new.cpp  CMakeLists.txt  README.md
LLVMPass/ConstantSIze/: CMakeLists.txt  ConstantSize.cpp
LLVMPasses/: CMakeLists.txt
LLVMPasses/BranchElimination/: BranchElimination.cpp  CMakeLists.txt
LLVMPasses/ConstantSize/: CMakeLists.txt  FunctionInfo.cpp
LLVMPasses/LoopTrans/: CMakeLists.txt  LoopTrans.cpp
LLVMPasses/function-name-pass/: CMakeLists.txt  FunctionName.cpp
LLVMPasses/function-wrapper-pass/: CMakeLists.txt
NFVEnclave/: Makefile_gcc  Makefile_llvm  badwords.txt
NFVEnclave/App/: App.cpp  App.h
NFVEnclave/Enclave/: Enclave.cpp  Enclave.edl  Enclave.h  Enclave_bare.cpp  Enclave_before.cpp  Enclave_ids_selfcontained.cpp  Enclave_string_before.cpp  enclave_ahocorasick.cpp
NFVEnclave/Include/: ahocorasick.h
NFVEnclave/sample_libcrypto/: sample_libcrypto.h
sgxtaintanalysis/: CMakeLists.txt  sgxtaintusingphasar.cpp
